# libarms

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
armsd/: Makefile  cacert.pem  callback.c  callback.h  lines.h
compat/: getaddrinfo.c  getnameinfo.c  strlcpy.c  strtok_r.c
doc/: .buildinfo  contents.html  download.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_sources/: contents.txt  download.txt  index.txt
doc/_sources/api/: api_top.txt  arms_app_event_cb_t.txt  arms_command_cb_t.txt  arms_config_cb_t.txt  arms_dump_state.txt  arms_end.txt  arms_event_loop.txt  arms_get_app_event_interval.txt  arms_get_connection_info.txt  arms_get_hbtinfo.txt  arms_get_proposed_push.txt  arms_get_rs_tunnel_url.txt  arms_get_rs_url.txt  arms_get_rsinfo.txt  arms_get_status_cb_t.txt  arms_hb_is_running.txt  arms_hb_set_cpu_detail_usage.txt  arms_hb_set_cpu_usage.txt  arms_hb_set_disk_usage.txt  arms_hb_set_mem_usage.txt  arms_hb_set_radiowave.txt  arms_hb_set_traffic_rate.txt  arms_hb_start.txt  arms_hb_stop.txt  arms_hb_store_statistics_cb_t.txt  arms_init.txt  arms_library_ver.txt  arms_library_ver_string.txt  arms_line_ctrl_cb_t.txt  arms_load_config.txt  arms_log_cb_t.txt  arms_protocol_ver.txt  arms_pull.txt  arms_push_method_query.txt  arms_read_config_cb_t.txt  arms_register_authkey.txt  arms_register_cert.txt  arms_register_description.txt  arms_restore_state.txt  arms_set_app_event_interval.txt  (+6 more)
doc/_sources/appendix/: appendix_top.txt
doc/_sources/arch/: arch_top.txt  config.txt  heartbeat.txt  pull.txt  push.txt
doc/_sources/impl/: event.txt  finalize.txt  heartbeat.txt  impl_top.txt  information.txt  initialize.txt  pull.txt  push.txt
doc/_sources/intro/: intro_top.txt
doc/_static/: nature.css
doc/api/: api_top.html  arms_app_event_cb_t.html  arms_command_cb_t.html  arms_config_cb_t.html  arms_dump_state.html  arms_end.html  arms_event_loop.html  arms_get_app_event_interval.html  arms_get_connection_info.html  arms_get_hbtinfo.html  arms_get_proposed_push.html  arms_get_rs_tunnel_url.html  arms_get_rs_url.html  arms_get_rsinfo.html  arms_get_status_cb_t.html  arms_hb_is_running.html  arms_hb_set_cpu_detail_usage.html  arms_hb_set_cpu_usage.html  arms_hb_set_disk_usage.html  arms_hb_set_mem_usage.html  arms_hb_set_radiowave.html  arms_hb_set_traffic_rate.html  arms_hb_start.html  arms_hb_stop.html  arms_hb_store_statistics_cb_t.html  arms_init.html  arms_library_ver.html  arms_library_ver_string.html  arms_line_ctrl_cb_t.html  arms_load_config.html  arms_log_cb_t.html  arms_protocol_ver.html  arms_pull.html  arms_push_method_query.html  arms_read_config_cb_t.html  arms_register_authkey.html  arms_register_cert.html  arms_register_description.html  arms_restore_state.html  arms_set_app_event_interval.html  (+6 more)
doc/appendix/: appendix_top.html
doc/arch/: arch_top.html  config.html  heartbeat.html  pull.html  push.html
doc/armsd/: armsd_top.html
doc/impl/: event.html  finalize.html  heartbeat.html  impl_top.html  information.html  initialize.html  pull.html  push.html
doc/intro/: intro_top.html
http/: base64.c  chunk.c  http.h  http_builder.c  http_parser.c  url.c
include/: arms_xml_tag.h  armsd_conf.h  axp_extern.h  compat.h  errcode.h  hb_routine.h  libarms.h  libarms_log.h  libarms_param.h  libarms_resource.h  libhb.h  lsconfig.h  module_db_mi.h
libarms/: arms_context.c  arms_event_loop.c  arms_pull.c  arms_push_method_query.c  base64.h  cache.c  hb_api.c  hb_routine.c  libarms.c  log.c  lsconfig.c  malloc.c  malloc.h  proxy.c  sock.c  sock.h  ssl.c  ssl.h  time.c  time.h  version.c
lsconf/: lsconfig_crypt.c  lsconfig_crypt.h
miconf/: armsd_conf_parse.c  armsd_conf_parse.h  armsd_miconf.c  armsd_miconf_binary.c  armsd_miconf_private.h
module/: module_db_mi.c
protocol/: arms_methods.c  arms_methods.h  arms_req_builder.c  arms_req_parser.c  arms_res_builder.c  arms_res_parser.c  arms_xml_tag.c  proto_error.c  proto_pull_ls.c  proto_pull_rs.c  proto_push_check_transaction.c  proto_push_clear_status.c  proto_push_configure.c  proto_push_confirmation.c  proto_push_dump_debug.c  proto_push_md_command.c  proto_push_method_query.c  proto_push_ping.c  proto_push_pull_config.c  proto_push_read_module_list.c  proto_push_read_status.c  proto_push_read_storage.c  proto_push_ready.c  proto_push_reboot.c  proto_push_traceroute.c  util.c
scheduler/: scheduler.c  scheduler.h
server/: server.c  server.h
simple-armsd/: main.c
transaction/: echo.c  line.c  retry.c  ssltunnel.c  ssltunnel.h  state.c  transaction.c  transaction.h  tunnel_chunk.c
xml/: axp.c  axp_internal.h  handler.c
